add site translations

--- a/packages/venia-ui/i18n/en_US.json
+++ b/packages/venia-ui/i18n/en_US.json
@@ -15,8 +15,8 @@
     "accountMenu.signOutButtonText": "Sign Out",
     "accountMenu.storeCreditLink": "Store Credit & Gift Cards",
     "accountTrigger.ariaLabel": "Toggle My Account Menu",
-    "accountTrigger.buttonFallback": "Sign In",
-    "accountTrigger.signIn": "Sign In",
+    "accountTrigger.buttonFallback": "Log In",
+    "accountTrigger.signIn": "Log In",
     "addressBook.addNewAddresstext": "Add New Address",
     "addressBook.applyButtonText": "Apply",
     "addressBook.cancelButtonText": "Cancel",
