--- a/packages/venia-ui/i18n/en_US.json
+++ b/packages/venia-ui/i18n/en_US.json
@@ -359,6 +359,7 @@
     "productFullDetail.errorUnknown": "Could not add item to cart. Please check required options and try again.",
     "productFullDetail.productDescription": "Product Description",
     "productFullDetail.details": "Details",
+    "productFullDetail.success": "You added {name} to your shopping cart",
     "productFullDetail.unavailableProduct": "This product is currently unavailable for purchase.",
     "productImageCarousel.previousButtonAriaLabel": "Previous Image",
     "productImageCarousel.nextButtonAriaLabel": "Next Image",
