--- a/packages/venia-ui/i18n/en_US.json
+++ b/packages/venia-ui/i18n/en_US.json
@@ -8,6 +8,7 @@
     "accountInformationPage.titleAccount": "Account Information",
     "accountMenu.accountInfoLink": "Account Information",
     "accountMenu.addressBookLink": "Address Book",
+    "accountMenu.commentsPageLink": "Comments page",
     "accountMenu.communicationsLink": "Communications",
     "accountMenu.favoritesListsLink": "Favorites Lists",
     "accountMenu.orderHistoryLink": "Order History",
