--- a/packages/venia-ui/i18n/fr_FR.json
+++ b/packages/venia-ui/i18n/fr_FR.json
@@ -8,6 +8,7 @@
   "accountInformationPage.titleAccount": "Account Information",
   "accountMenu.accountInfoLink": "Account Information",
   "accountMenu.addressBookLink": "Address Book",
+  "accountMenu.commentsPageLink": "Page de commentaires",
   "accountMenu.communicationsLink": "Communications",
   "accountMenu.favoritesListsLink": "Favorites Lists",
   "accountMenu.orderHistoryLink": "Order History",
